--- a/public/views/header.ejs
+++ b/public/views/header.ejs
@@ -7,19 +7,24 @@
     <meta charset="utf-8">
     <title>Smart Commute</title>
     <link href="/public/css/overrides.css" rel="stylesheet">
-    <!--<link rel="apple-touch-icon" sizes="180x180" href="/public/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/public/favicons/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/public/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/public/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="/public/favicons/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="msapplication-config" content="/public/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-    <link rel="manifest" href="/manifest.json">-->
 </head>
 <body>
-<div id="header">
-    <h2>Smart Commute</h2>
-    <h2>Emmett</h2>
-    <img src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo">
+<div class="container u-full-x" id="header">
+    <div class="row">
+        <div class="eight columns">
+            <h1>Smart Commute</h1>
+            <h2>Emmett</h2>
+        </div>
+        <div class="four columns">
+            <img src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo" height="200vh" width="200vh">
+        </div>
+    </div>
 </div>
