--- a/public/css/overrides.scss
+++ b/public/css/overrides.scss
@@ -1,10 +1,14 @@
 @import 'normalize.css';
 @import 'skeleton.css';
 
-h1{
-
-}
 #header {
+  padding-top: 10%;
 
-
+  h1{
+    font-size: 4vh;
+  }
+  h2 {
+    padding: 2% 0% 0% 25%;
+    font-size: 3.75vh;
+  }
 }
