--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -5,7 +5,33 @@
   #header h1 {
     font-size: 4vh; }
   #header h2 {
-    padding: 2% 0% 0% 25%;
+    padding: 2% 0 0 25%;
     font-size: 3.75vh; }
+
+
+
+
+  /* NICOLAS' STUFF. DO NOT TOUCH. */
+#bigDiv {
+  width: 80%;
+  margin: 30% 0 0 10%;
+  height: 30%;
+  border: 1px solid black;
+}
+
+.leftColumns {
+  margin: 6% 0 0 5%;
+  height: 20%;
+  width: 25%;
+  border: 1px solid black;
+}
+
+.rightColumns {
+  float: right;
+  margin: -14% 5% 0 0;
+  height: 20%;
+  width: 25%;
+  border: 1px solid black;
+}
 
 /*# sourceMappingURL=overrides.css.map */
