--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -23,14 +23,17 @@
   margin: 6% 0 0 5%;
   height: 20%;
   width: 25%;
-  border: 1px solid black;
+  border: 1px solid #D9D9D9;
+  background-color: #D9D9D9;
+  font-weight: bold;
+  text-align: center;
 }
 
 .rightColumns {
   float: right;
   margin: -14% 5% 0 0;
   height: 20%;
-  width: 25%;
+  width: 40%;
   border: 1px solid black;
 }
 
