--- a/public/views/logger.html
+++ b/public/views/logger.html
@@ -13,9 +13,9 @@ DON'T FORGET TO CHANGE BACK TO EJS
 </head>
 <body>
     <div id="bigDiv">
-        <div class="leftColumns">Firstdiv</div> <div class="rightColumns">Fourthdiv</div>
-        <div class="leftColumns">Seconddiv</div> <div class="rightColumns">Fifthdiv</div>
-        <div class="leftColumns">Thirddiv</div> <div class="rightColumns">Sixdiv</div>
+        <div class="leftColumns">Date</div> <input type="text" class="rightColumns" placeholder="ex. 5/6/17">
+        <div class="leftColumns">Trips</div> <input type="text" class="rightColumns" placeholder="ex. 1">
+        <div class="leftColumns">Mileage</div> <input type="text" class="rightColumns" placeholder="ex. 8">
     </div>
 </body>
 
