yup things happened

--- a/public/views/header.ejs
+++ b/public/views/header.ejs
@@ -17,14 +17,14 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-<div class="container u-full-x" id="header">
+<div class="container u-full-width" id="header">
     <div class="row">
-        <div class="eight columns">
+        <div class="six columns offset-by-one">
             <h1>Smart Commute</h1>
             <h2>Emmett</h2>
         </div>
         <div class="four columns">
-            <img src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo" height="200vh" width="200vh">
+            <img src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo" height="100%" width="100%">
         </div>
     </div>
 </div>
