--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -1,11 +1,19 @@
 @import url(normalize.css);
 @import url(skeleton.css);
 #header {
-  padding-top: 10%; }
-  #header h1 {
-    font-size: 4vh; }
-  #header h2 {
+  padding-top: 5%; }
+
+/*
+#header {
+  padding-top: 5%;
+  font-family: "Arial";
+  h1{
+    font-size: 4vh;
+  }
+  h2 {
     padding: 2% 0% 0% 25%;
-    font-size: 3.75vh; }
+    font-size: 3.75vh;
+  }
+}*/
 
 /*# sourceMappingURL=overrides.css.map */
