--- a/public/css/overrides.scss
+++ b/public/css/overrides.scss
@@ -2,8 +2,12 @@
 @import 'skeleton.css';
 
 #header {
-  padding-top: 10%;
-
+  padding-top: 5%;
+}
+/*
+#header {
+  padding-top: 5%;
+  font-family: "Arial";
   h1{
     font-size: 4vh;
   }
@@ -11,4 +15,4 @@
     padding: 2% 0% 0% 25%;
     font-size: 3.75vh;
   }
-}
+}*/
