--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -8,33 +8,24 @@
     padding: 2% 0 0 25%;
     font-size: 3.75vh; }
 
-
-
-
-  /* NICOLAS' STUFF. DO NOT TOUCH. */
+/* NICOLAS' STUFF. DO NOT TOUCH. */
 #bigDiv {
   width: 80%;
   margin: 30% 0 0 10%;
   height: 30%;
-  border: 1px solid black;
-}
+  border: 1px solid black; }
 
 .leftColumns {
   margin: 6% 0 0 5%;
   height: 20%;
   width: 25%;
-  border: 1px solid #D9D9D9;
   background-color: #D9D9D9;
   font-weight: bold;
-  text-align: center;
-}
+  text-align: center; }
 
 .rightColumns {
   float: right;
   margin: -14% 5% 0 0;
-  height: 20%;
-  width: 40%;
-  border: 1px solid black;
-}
+  width: 40%; }
 
 /*# sourceMappingURL=overrides.css.map */
