Working on logger page--change placeholder text color

--- a/public/css/overrides.scss
+++ b/public/css/overrides.scss
@@ -18,7 +18,14 @@
   width: 80%;
   margin: 30% 0 0 10%;
   height: 30%;
-  border: 1px solid black;
+  border: 1px solid #000;
+}
+
+#tripDescrip {
+  margin: 15% 0 0 10%;
+  width: 80%;
+  height: 40%;
+  background-color: #D9D9D9;
 }
 
 .leftColumns {
