--- a/public/views/logger.html
+++ b/public/views/logger.html
@@ -17,6 +17,7 @@ DON'T FORGET TO CHANGE BACK TO EJS
         <div class="leftColumns">Trips</div> <input type="text" class="rightColumns" placeholder="ex. 1">
         <div class="leftColumns">Mileage</div> <input type="text" class="rightColumns" placeholder="ex. 8">
     </div>
+    <input type="text" id="tripDescrip" placeholder="Option to enter a description of the trip">
 </body>
 
 <!--<% include public/views/footer.ejs %>-->
