--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -13,7 +13,13 @@
   width: 80%;
   margin: 30% 0 0 10%;
   height: 30%;
-  border: 1px solid black; }
+  border: 1px solid #000; }
+
+#tripDescrip {
+  margin: 15% 0 0 10%;
+  width: 80%;
+  height: 40%;
+  background-color: #D9D9D9; }
 
 .leftColumns {
   margin: 6% 0 0 5%;
