--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,5 +1,17 @@
 <% include public/views/header.ejs %>
 
+<section class="loginform cf">
+    <form name="login" action="index_submit" method="get" accept-charset="utf-8">
+        <ul>
+            <li><label>Email</label>
+                <input type="email" name="usermail" placeholder="yourname@email.com" required></li>
+            <li><label>Password</label>
+                <input ty="password" name="password" placeholder="password" required></li>
+            <li>
+                <input type="submit" value="Login"></li>
+        </ul>
+    </form>
+</section>
 
 
 <% include public/views/footer.ejs %>
