Working on logger page--change placeholder text color

--- a/public/views/logger.html
+++ b/public/views/logger.html
@@ -13,11 +13,14 @@ DON'T FORGET TO CHANGE BACK TO EJS
 </head>
 <body>
     <div id="bigDiv">
-        <div class="leftColumns">Date</div> <input type="text" class="rightColumns" placeholder="ex. 5/6/17">
-        <div class="leftColumns">Trips</div> <input type="text" class="rightColumns" placeholder="ex. 1">
-        <div class="leftColumns">Mileage</div> <input type="text" class="rightColumns" placeholder="ex. 8">
+        <div class="leftColumns">Date</div>
+        <input type="text" class="rightColumns" placeholder="ex. 5/6/17">
+        <div class="leftColumns">Trips</div>
+        <input type="text" class="rightColumns" placeholder="ex. 1">
+        <div class="leftColumns">Mileage</div>
+        <input type="text" class="rightColumns" placeholder="ex. 8">
     </div>
-    <input type="text" id="tripDescrip" placeholder="Option to enter a description of the trip">
+    <textarea id="tripDescrip" placeholder="Option to enter a description of the trip"></textarea>
 </body>
 
 <!--<% include public/views/footer.ejs %>-->
