--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -6,21 +6,22 @@
 /* NICOLAS' STUFF. DO NOT TOUCH. */
 #bigDiv {
   width: 80%;
-  margin: 30% 0 0 10%;
+  margin: 10% 0 0 10%;
   height: 30%;
   border: 1px solid #000; }
 
 #tripDescrip {
-  margin: 15% 0 0 10%;
+  margin: 10% 0 10% 10%;
   width: 80%;
-  height: 40%;
-  background-color: #D9D9D9; }
+  height: 20%;
+  resize: vertical;
+  max-height: 60%; }
 
 .leftColumns {
   margin: 6% 0 0 5%;
   height: 20%;
   width: 25%;
-  background-color: #D9D9D9;
+  border: 1px solid #D9D9D9;
   font-weight: bold;
   text-align: center; }
 
