moved omar into skeleton

--- a/public/views/header.ejs
+++ b/public/views/header.ejs
@@ -19,11 +19,11 @@
 <body>
 <div class="container u-full-width" id="header">
     <div class="row">
-        <div class="six columns offset-by-one">
+        <div class="five columns offset-by-two">
             <h1>Smart Commute</h1>
-            <h2>Emmett</h2>
+            <h2>Emmet</h2>
         </div>
-        <div class="four columns">
+        <div class="four columns offset-by-one">
             <img src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo" height="100%" width="100%">
         </div>
     </div>
