--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -2,14 +2,19 @@
 
 <section class="loginform cf">
     <form name="login" action="index_submit" method="get" accept-charset="utf-8">
-        <ul>
-            <li><label>Email</label>
-                <input type="email" name="usermail" placeholder="yourname@email.com" required></li>
-            <li><label>Password</label>
-                <input ty="password" name="password" placeholder="password" required></li>
-            <li>
-                <input type="submit" value="Login"></li>
-        </ul>
+        <div class="row">
+            <div class="three column offset-by-six">
+                <label>Email</label>
+                <input type="email" name="usermail" placeholder="yourname@email.com" required>
+                <br>
+                <label>Password</label>
+                <input type="password" name="password" placeholder="password" required>
+                <br>
+                <br>
+                <input type="submit" value="Login">
+            </div>
+        </div>
+
     </form>
 </section>
 
