--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -14,8 +14,7 @@
   margin: 10% 0 10% 10%;
   width: 80%;
   height: 20%;
-  resize: vertical;
-  max-height: 60%; }
+  resize: vertical; }
 
 .leftColumns {
   margin: 6% 0 0 5%;
