Finished logger page--still needs javascript

--- a/public/views/logger.ejs
+++ b/public/views/logger.ejs
@@ -1,8 +1,4 @@
-<!--
-DON'T FORGET TO CHANGE BACK TO EJS
--->
-
-<!--<% include public/views/header.ejs %>-->
+<% include public/views/header.ejs %>
 
 <head>
     <meta charset="UTF-8">
@@ -22,5 +18,3 @@ DON'T FORGET TO CHANGE BACK TO EJS
     </div>
     <textarea id="tripDescrip" placeholder="Option to enter a description of the trip"></textarea>
 </body>
-
-<!--<% include public/views/footer.ejs %>-->
