Fixed ejs includes

--- a/public/views/leaderboard.ejs
+++ b/public/views/leaderboard.ejs
@@ -1,7 +1,7 @@
-<% include public/views/header.ejs %>
+<% include ./header.ejs %>
 
 <p>
     leaderboard
 </p>
 
-<% include public/views/footer.ejs %>
+<% include ./footer.ejs %>
