--- a/public/views/logger.ejs
+++ b/public/views/logger.ejs
@@ -1,4 +1,4 @@
-<% include public/views/header.ejs %>
+<% include ./header.ejs %>
 
 <head>
     <meta charset="UTF-8">
@@ -18,3 +18,5 @@
     </div>
     <textarea id="tripDescrip" placeholder="Option to enter a description of the trip"></textarea>
 </body>
+
+<% include ./footer.ejs %>
