--- a/public/views/viewData.ejs
+++ b/public/views/viewData.ejs
@@ -1,5 +1,5 @@
-<% include public/views/header.ejs %>
+<% include ./header.ejs %>
 
 
 
-<% include public/views/footer.ejs %>
+<% include ./footer.ejs %>
