Fixed logo pathing in header.ejs, and re-fixed ejs includes.

--- a/public/views/header.ejs
+++ b/public/views/header.ejs
@@ -24,7 +24,7 @@
             <h2>Emmet</h2>
         </div>
         <div class="four columns offset-by-one">
-            <img src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo" height="100%" width="100%">
+            <img src="../images/SmartCommuteLogo.png" alt="Smart Commute Logo" height="100%" width="100%">
         </div>
     </div>
 </div>
