--- a/public/views/leaderboard.ejs
+++ b/public/views/leaderboard.ejs
@@ -1,7 +1,7 @@
-<% include ./header.ejs %>
+<% include header.ejs %>
 
 <p>
     leaderboard
 </p>
 
-<% include ./footer.ejs %>
+<% include footer.ejs %>
