--- a/public/views/logger.ejs
+++ b/public/views/logger.ejs
@@ -1,4 +1,4 @@
-<% include ./header.ejs %>
+<% include header.ejs %>
 
 <head>
     <meta charset="UTF-8">
@@ -19,4 +19,4 @@
     <textarea id="tripDescrip" placeholder="Option to enter a description of the trip"></textarea>
 </body>
 
-<% include ./footer.ejs %>
+<% include footer.ejs %>
