--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,4 +1,4 @@
-<% include ./header.ejs %>
+<% include header.ejs %>
 
 <section class="loginform cf">
     <form name="login" action="index_submit" method="get" accept-charset="utf-8">
@@ -19,4 +19,4 @@
 </section>
 
 
-<% include ./footer.ejs %>
+<% include footer.ejs %>
