--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -1,6 +1,6 @@
 <!--Use the example forms from skeleton site-->
-<% include ./header.ejs %>
+<% include header.ejs %>
 
 
 
-<% include ./footer.ejs %>
+<% include footer.ejs %>
