Working on leaderboard page

--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -4,6 +4,8 @@
   padding-top: 5%; }
 
 /* NICOLAS' STUFF. DO NOT TOUCH. */
+/*multiple pages*/
+/*logger.ejs page*/
 #bigDiv {
   width: 80%;
   margin: 10% 0 0 10%;
@@ -28,5 +30,13 @@
   float: right;
   margin: -14% 5% 0 0;
   width: 40%; }
+
+/*leaderboard.ejs page*/
+#leaderBoard {
+  width: 80%;
+  margin-left: 10%; }
+
+#totals {
+  font-weight: bold; }
 
 /*# sourceMappingURL=overrides.css.map */
