--- a/public/css/overrides.scss
+++ b/public/css/overrides.scss
@@ -7,6 +7,9 @@
 
 
 /* NICOLAS' STUFF. DO NOT TOUCH. */
+/*multiple pages*/
+
+/*logger.ejs page*/
 #bigDiv {
   width: 80%;
   margin: 10% 0 0 10%;
@@ -34,4 +37,14 @@
   float: right;
   margin: -14% 5% 0 0;
   width: 40%;
+}
+
+/*leaderboard.ejs page*/
+#leaderBoard {
+  width: 80%;
+  margin-left: 10%;
+}
+
+#totals {
+  font-weight: bold;
 }
