--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -3,7 +3,7 @@
 <section class="loginform cf">
     <form name="login" action="index_submit" method="get" accept-charset="utf-8">
         <div class="row">
-            <div class="three column offset-by-six">
+            <div class="two column offset-by-five" id="label-stuff">
                 <label>Email</label>
                 <input type="email" name="usermail" placeholder="yourname@email.com" required>
                 <br>
@@ -14,7 +14,6 @@
                 <input type="submit" value="Login">
             </div>
         </div>
-
     </form>
 </section>
 
