--- a/public/css/overrides.scss
+++ b/public/css/overrides.scss
@@ -53,9 +53,8 @@
   text-align: center;
 }
 
-.username {
+#username1, #username2, #username3, #username4, #username5, #username6, #username7, #username8, #username9, #username10, #totals, #username {
   padding-left: 5%;
-  border-right: 1px solid #E1E1E1;
 }
 
 #lightGrey {
