--- a/public/views/leaderboard.html
+++ b/public/views/leaderboard.html
@@ -11,60 +11,60 @@
     <table id="leaderBoard">
         <thead>
             <tr class="centered" id="lightGrey">
-                <th>Username</th>
+                <th id="username">Username</th>
                 <th>Trips</th>
                 <th>Mileage</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td class="username" id="username1"></td>
-                <td class="trips" id="trips1"></td>
+                <td id="username1"></td>
+                <td id="trips1"></td>
                 <td id="mileage1"></td>
             </tr>
             <tr>
-                <td class="username" id="username2"></td>
-                <td class="trips" id="trips2"></td>
+                <td id="username2"></td>
+                <td id="trips2"></td>
                 <td id="mileage2"></td>
             </tr>
             <tr>
-                <td class="username" id="username3"></td>
-                <td class="trips" id="trips3"></td>
+                <td id="username3"></td>
+                <td id="trips3"></td>
                 <td id="mileage3"></td>
             </tr>
             <tr>
-                <td class="username" id="username4"></td>
-                <td class="trips" id="trips4"></td>
+                <td id="username4"></td>
+                <td id="trips4"></td>
                 <td id="mileage4"></td>
             </tr>
             <tr>
-                <td class="username" id="username5"></td>
-                <td class="trips" id="trips5"></td>
+                <td id="username5"></td>
+                <td id="trips5"></td>
                 <td id="mileage5"></td>
             </tr>
             <tr>
-                <td class="username" id="username6"></td>
-                <td class="trips" id="trips6"></td>
+                <td id="username6"></td>
+                <td id="trips6"></td>
                 <td id="mileage6"></td>
             </tr>
             <tr>
-                <td class="username" id="username7"></td>
-                <td class="trips" id="trips7"></td>
+                <td id="username7"></td>
+                <td id="trips7"></td>
                 <td id="mileage7"></td>
             </tr>
             <tr>
-                <td class="username" id="username8"></td>
-                <td class="trips" id="trips8"></td>
+                <td id="username8"></td>
+                <td id="trips8"></td>
                 <td id="mileage8"></td>
             </tr>
             <tr>
-                <td class="username" id="username9"></td>
-                <td class="trips" id="trips9"></td>
+                <td id="username9"></td>
+                <td id="trips9"></td>
                 <td id="mileage9"></td>
             </tr>
             <tr>
-                <td class="username" id="username10"></td>
-                <td class="trips" id="trips10"></td>
+                <td id="username10"></td>
+                <td id="trips10"></td>
                 <td id="mileage10"></td>
             </tr>
             <tr class="centered" id="darkGrey">
