Working on leaderboard page

--- a/public/views/leaderboard.ejs
+++ b/public/views/leaderboard.ejs
@@ -1,4 +1,4 @@
-<!--<% include header.ejs %>-->
+<% include header.ejs %>
 
 <head>
     <meta charset="UTF-8">
@@ -76,4 +76,4 @@
     </table>
 </body>
 
-<!--<% include footer.ejs %>-->
+<% include footer.ejs %>
