--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,4 +1,4 @@
-<% include header.ejs %>
+<% include public/views/header.ejs%>
 
 <section class="loginform cf">
     <form name="login" action="index_submit" method="get" accept-charset="utf-8">
@@ -18,4 +18,4 @@
 </section>
 
 
-<% include footer.ejs %>
+<% include public/views/footer.ejs %>
