--- a/public/views/header.ejs
+++ b/public/views/header.ejs
@@ -25,16 +25,13 @@
         <div class="one-third column">
             <img src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo" height="100%" width="100%">
         </div>
-        <div class="four columns offset-by-one">
-            <img src="../images/SmartCommuteLogo.png" alt="Smart Commute Logo" height="100%" width="100%">
-        </div>
         <div class="one-third column left">
             <h1>Commute</h1>
         </div>
     </div>
     <div class="row">
         <div class="one-third column">&nbsp;</div>
-        <div class="one-third column"><h2>Emmet</h2></div>
+        <div class="one-third column" id="emmet"><h2>Emmet</h2></div>
         <div class="one-third column">&nbsp;</div>
     </div>
 </div>
