what did omar do this time?

--- a/public/views/logger.html
+++ b/public/views/logger.html
@@ -20,4 +20,4 @@ DON'T FORGET TO CHANGE BACK TO EJS
     <input type="text" id="tripDescrip" placeholder="Option to enter a description of the trip">
 </body>
 
-<!--<% include public/views/footer.ejs %>-->
+<!--<% include public/views/footer.html %>-->
