--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -29,4 +29,12 @@
   margin: -14% 5% 0 0;
   width: 40%; }
 
+/* Footer stuff haha */
+.footer {
+  font-family: "Times New Roman";
+  font-size: 12px;
+  background-color: #33C3F0;
+  text-align: right;
+  border-width: 4px; }
+
 /*# sourceMappingURL=overrides.css.map */
