finalized header, thing was wrong, i fixed

--- a/public/css/overrides.scss
+++ b/public/css/overrides.scss
@@ -1,8 +1,9 @@
 @import 'normalize.css';
 @import 'skeleton.css';
 
+/*Header*/
 #header {
-  margin: 5% 0% 0% 30%;
+  margin: 5% 0% 0% 6%;
   .right {
     padding: 12% 0% 0% 5%;
   }
