--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -1,7 +1,8 @@
 @import url(normalize.css);
 @import url(skeleton.css);
+/*Header*/
 #header {
-  margin: 5% 0% 0% 30%; }
+  margin: 5% 0% 0% 6%; }
   #header .right {
     padding: 12% 0% 0% 5%; }
   #header .left {
