--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -3,7 +3,8 @@
 <section class="loginform cf">
     <form name="login" action="index_submit" method="get" accept-charset="utf-8">
         <div class="row">
-            <div class="two column offset-by-five" id="label-stuff">
+            <div class="one-third column">&nbsp;</div>
+            <div class="one-third column" id="label-stuff">
                 <label>Email</label>
                 <input type="email" name="usermail" placeholder="yourname@email.com" required>
                 <br>
@@ -13,6 +14,7 @@
                 <br>
                 <input type="submit" value="Login">
             </div>
+            <div class="one-third column">&nbsp;</div>
         </div>
     </form>
 </section>
