--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -4,7 +4,7 @@
     <form name="login" action="index_submit" method="get" accept-charset="utf-8">
         <div class="row">
             <div class="one-third column">&nbsp;</div>
-            <div class="one-third column" id="label-stuff">
+            <div class="one-third column" id="loginScreen">
                 <label>Email</label>
                 <input type="email" name="usermail" placeholder="yourname@email.com" required>
                 <br>
@@ -13,6 +13,7 @@
                 <br>
                 <br>
                 <input type="submit" value="Login">
+                <input type="" value=""
             </div>
             <div class="one-third column">&nbsp;</div>
         </div>
