Working from home--last stretch!

--- a/public/views/footer.ejs
+++ b/public/views/footer.ejs
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="../css/overrides.css">
 <link rel="stylesheet" href="../css/skeleton.css">
 
-<footer class="footer twelve">
-    <div class="developers">Developed by: Nick Simms, Omar Al-Qouran & Gabe Meyerson </div>
+<footer class="footer">
+    <div class="developers">Developed by: Nicolas Sims, Omar Al-Qouran & Gabe Meyerson </div>
     <div class="Contact.us">todo: Enter contact info</div>
 </footer>
