--- a/public/views/header.ejs
+++ b/public/views/header.ejs
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--
-	TODO:
--->
-<html lang="en">
+<ejs lang="en">
 <head>
     <meta charset="utf-8">
     <title>Smart Commute</title>
@@ -17,13 +14,23 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+<div class="row">
+    <img class="logo" src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo">
+    <div class="row texts">
+        <div>Emmet Smart Commute</div>
+    </div>
+</div>
+
+
+
+<!--
 <div class="container u-max-full-width " id="header">
     <div class="row">
         <div class="one-third column right">
-            <h1>Smart</h1>
+            <h1>Smart Commute Emmet</h1>
         </div>
         <div class="one-third column">
-            <img src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo" height="100%" width="100%">
+            <img src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo" height="50%" width="50%">
         </div>
         <div class="one-third column left">
             <h1>Commute</h1>
@@ -34,4 +41,4 @@
         <div class="one-third column" id="emmet"><h2>Emmet</h2></div>
         <div class="one-third column">&nbsp;</div>
     </div>
-</div>
+</div>-->
