--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -2,13 +2,24 @@
 @import url(skeleton.css);
 /*Header*/
 #header {
-  margin: 5% 0% 0% 6%; }
+  margin: 5% 0 0 6%; }
   #header .right {
-    padding: 12% 0% 0% 5%; }
+    padding: 12% 0 0 5%; }
   #header .left {
-    padding: 12% 0% 0% 8%; }
+    padding: 12% 0 0 8%; }
   #header #emmet {
-    margin: 2% 0% 0% 11%; }
+    margin: 2% 0 0 11%; }
+
+.logo {
+  height: 15%;
+  width: 15%;
+  float: right;
+  margin: 1% 3% 0 0; }
+
+.texts {
+  float: left;
+  font-size: 450%;
+  margin: 3% 0 0 3%; }
 
 /* NICOLAS' STUFF. DO NOT TOUCH. */
 /*multiple pages*/
@@ -30,9 +41,12 @@
 .footer {
   font-family: "Times New Roman";
   font-size: 12px;
-  background-color: #33C3F0;
+  background-color: rgba(27, 27, 27, 0.29);
   text-align: right;
-  border-width: 4px; }
+  border-width: 4px;
+  position: absolute;
+  width: 100%;
+  bottom: 0; }
 
 #bigDiv {
   width: 80%;
