--- a/public/css/overrides.scss
+++ b/public/css/overrides.scss
@@ -102,3 +102,21 @@
 #totals {
   font-weight: bold;
 }
+
+/*login.ejs page*/
+#email, #password {
+  height: 200%;
+}
+
+#loginForm {
+  font-size: 300%;
+  font-weight: normal;
+}
+
+#loginSubmit {
+  width: 50%;
+}
+
+.loginPage {
+  margin-left: 5%;
+}
