Working from home--last stretch!

--- a/public/views/footer.ejs
+++ b/public/views/footer.ejs
@@ -1,11 +1,5 @@
-<!-- SCRIPTS -->
-
-
-
-<link rel="stylesheet" href="../css/overrides.css">
-<link rel="stylesheet" href="../css/skeleton.css">
-
+</body>
+<script src="public/javascripts/main.js"></script>
 <footer class="footer">
-    <div class="developers">Developed by: Nicolas Sims, Omar Al-Qouran & Gabe Meyerson </div>
-    <div class="Contact.us">todo: Enter contact info</div>
+    <div class="developers">Developed by: Nicolas Sims, Omar Al-Qouran & Gabe Meyerson</div>
 </footer>
