--- a/public/views/header.ejs
+++ b/public/views/header.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<ejs lang="en">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Smart Commute</title>
     <link href="/public/css/overrides.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/overrides.css">
+    <link rel="stylesheet" href="../css/skeleton.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/public/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/public/favicons/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/public/favicons/favicon-16x16.png" sizes="16x16">
