Working from home--last stretch!

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -10,7 +10,7 @@
             <input id="password" type="password" name="password" placeholder="password" required>
             <br>
             <br>
-            <input id="loginSubmit" type="submit" value="Login">
+            <button id="loginSubmit" value="Login">Submit</button>
         </div>
     </form>
 </div>
