Working from home--last stretch!

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,13 +1,13 @@
 <% include public/views/header.ejs %>
 
 <div id="loginPage">
-    <form id="loginForm" name="login" action="index_submit" method="get" accept-charset="utf-8">
+    <form id="loginForm">
         <div class="row loginPage">
             <label>Email</label>
-            <input id="email" type="email" name="usermail" placeholder="yourname@email.com" required>
+            <input id="email" type="email" placeholder="yourname@email.com" required>
             <br>
             <label>Password</label>
-            <input id="password" type="password" name="password" placeholder="password" required>
+            <input id="password" type="password" placeholder="password" required>
             <br>
             <br>
             <button id="loginSubmit" value="Login">Submit</button>
