--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,7 +1,7 @@
 <% include public/views/header.ejs %>
 
 <div id="loginPage">
-    <form id="loginForm">
+    <form id="">
         <div class="row loginPage">
             <label>Email</label>
             <input id="email" type="email" placeholder="yourname@email.com" required>
@@ -10,7 +10,7 @@
             <input id="password" type="password" placeholder="password" required>
             <br>
             <br>
-            <button id="loginSubmit" value="Login">Submit</button>
+            <button id="loginSubmit" type="button">Submit</button>
         </div>
     </form>
 </div>
