--- a/public/views/logger.ejs
+++ b/public/views/logger.ejs
@@ -3,4 +3,6 @@
     <div class="leftColumns">Trips</div> <input type="text" class="rightColumns" placeholder="ex. 1">
     <div class="leftColumns">Mileage</div> <input type="text" class="rightColumns" placeholder="ex. 8">
 </div>
-<input type="text" id="tripDescrip" placeholder="Option to enter a description of the trip">
+<textarea type="text" id="tripDescrip" placeholder="Option to enter a description of the trip"></textarea>
+<button id="leaderboardButton" type="button">Leaderboard</button>
+
