--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -25,7 +25,7 @@
 /*multiple pages*/
 /*logger.ejs page*/
 .leftColumns {
-  margin: 6% 0 0 5%;
+  margin: 5% 5% 5% 5%;
   height: 20%;
   width: 25%;
   border: 1px solid #D9D9D9;
@@ -34,7 +34,7 @@
 
 .rightColumns {
   float: right;
-  margin: -14% 5% 0 0;
+  margin: -9% 5% 0 0;
   width: 40%; }
 
 /* Footer stuff haha */
@@ -51,13 +51,13 @@
 #bigDiv {
   width: 80%;
   margin: 10% 0 0 10%;
-  height: 30%;
+  padding-bottom: 4%;
   border: 1px solid #000; }
 
 #tripDescrip {
   margin: 10% 0 10% 10%;
   width: 80%;
-  height: 20%;
+  height: 50%;
   resize: vertical; }
 
 /*leaderboard.ejs page*/
