--- a/public/css/overrides.scss
+++ b/public/css/overrides.scss
@@ -33,7 +33,7 @@
 
 /*logger.ejs page*/
 .leftColumns {
-  margin: 6% 0 0 5%;
+  margin: 5% 5% 5% 5%;
   height: 20%;
   width: 25%;
   border: 1px solid #D9D9D9;
@@ -43,7 +43,7 @@
 
 .rightColumns {
   float: right;
-  margin: -14% 5% 0 0;
+  margin: -9% 5% 0 0;
   width: 40%;
 }
 
@@ -62,14 +62,14 @@
 #bigDiv {
   width: 80%;
   margin: 10% 0 0 10%;
-  height: 30%;
+  padding-bottom: 4%;
   border: 1px solid #000;
 }
 
 #tripDescrip {
   margin: 10% 0 10% 10%;
   width: 80%;
-  height: 20%;
+  height: 50%;
   resize: vertical;
 }
 
