--- a/public/css/overrides.scss
+++ b/public/css/overrides.scss
@@ -15,6 +15,10 @@
   }
 }
 
+#pushdown {
+  margin-bottom: 5%;
+}
+
 .logo {
   height: 15%;
   width: 15%;
@@ -124,4 +128,9 @@
 
 .loginPage {
   margin-left: 5%;
+}
+
+#loggerButton, #leaderboardButton {
+  position: absolute;
+  left: 45%;
 }
