--- a/public/views/header.ejs
+++ b/public/views/header.ejs
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-<div class="row">
+<div class="row" id="pushdown">
     <img class="logo" src="/public/images/SmartCommuteLogo.png" alt="Smart Commute Logo">
     <div class="row texts">
         <div>Emmet Smart Commute</div>
