--- a/public/views/leaderboard.ejs
+++ b/public/views/leaderboard.ejs
@@ -64,4 +64,4 @@
         </tr>
     </tbody>
 </table>
-<button id="loggerButton" type="button">Logger</button>
+<button id="loggerButton" class="switchbutton">Logger</button>
