--- a/public/views/logger.ejs
+++ b/public/views/logger.ejs
@@ -4,5 +4,5 @@
     <div class="leftColumns">Mileage</div> <input type="text" class="rightColumns" placeholder="ex. 8">
 </div>
 <textarea type="text" id="tripDescrip" placeholder="Option to enter a description of the trip"></textarea>
-<button id="leaderboardButton" type="button">Leaderboard</button>
+<button id="leaderboardButton" class="switchbutton">Leaderboard</button>
 
