--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -20,7 +20,7 @@
 </div>
 
 <div id="leaderboardPage">
-    <% include public/views/logger.ejs %>
+    <% include public/views/leaderboard.ejs %>
 </div>
 
 <% include public/views/footer.ejs %>
