Trying to get the object to go back to the main.js.

--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -108,4 +108,9 @@
   position: absolute;
   left: 45%; }
 
+#loggerSubmit {
+  position: absolute;
+  left: 47%;
+  margin-top: 2%; }
+
 /*# sourceMappingURL=overrides.css.map */
