--- a/public/views/footer.ejs
+++ b/public/views/footer.ejs
@@ -1,5 +1,5 @@
 </body>
 <script src="public/javascripts/main.js"></script>
 <footer class="footer">
-    <div class="developers">Developed by: Nicolas Sims, Omar Al-Qouran & Gabe Meyerson</div>
+    <div class="developers">Developed by: Nicolas Sims. Credit claimed by Omar Al-Qouran & Gabe Meyerson</div>
 </footer>
