Adding new stuff to facilitate new users.

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -11,8 +11,15 @@
             <br>
             <br>
             <button id="loginSubmit" type="button">Submit</button>
+            <br>
+            <br>
+            <button id="switchToSignup" type="button">Don't have an account? Sign up!</button>
         </div>
     </form>
+</div>
+
+<div id="signupPage">
+    <% include public/views/signup.ejs %>
 </div>
 
 <div id="loggerPage">
